Fixed overflow from galaxy component on small screens, enlarged alien pic on mobile

--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -5,7 +5,8 @@
   transform: translate(-50%, -50%);
   height: calc(100vh - 85px);
   width: calc(100% - 55px);
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 @media screen and (pointer: coarse) {
