--- a/components/TargetOverview/TargetOverview.module.css
+++ b/components/TargetOverview/TargetOverview.module.css
@@ -68,7 +68,6 @@
 }
 
 .image {
-  /* relative positions alien on top of border */
   position: relative;
   width: 100%;
   padding: 0.5rem;
@@ -77,8 +76,8 @@
   height: auto;
   aspect-ratio: 1/1;
   object-fit: contain;
-  filter: drop-shadow(0 0 12px rgba(0 112 243 / 30%)) drop-shadow(0 0 50px rgb(106, 71, 237, 0.8));
   transform: scaleY(0);
+  z-index: 5;
   filter: hue-rotate(120deg);
   animation: reveal 75ms linear 2.4s forwards, chameleon 10s linear infinite alternate;
 }
@@ -206,6 +205,14 @@
 .galaxyContainer video {
   object-fit: contain;
   height: 18vh;
+  transition: 100ms linear;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .galaxyContainer video:hover {
+    width: 30vw;
+    height: 30vh;
+  }
 }
 
 @media screen and (max-height: 850px) {
@@ -237,11 +244,33 @@
     text-align: center;
     margin: 0 auto;
   }
+
+  .galaxyContainer {
+    position: relative;
+    height: fit-content;
+    border-bottom: 4px solid var(--stroke);
+    border-top: none;
+    border-left: none;
+    margin-top: 3rem;
+    clip-path: polygon(20% 0%, 80% 0%, 100% 0, 100% 91%, 92% 100%, 7% 100%, 0 90%, 0 0);
+  }
+
+  .galaxyContainer figcaption {
+    border-top: 4px solid var(--stroke);
+  }
+
+  .galaxyContainer video {
+    width: 100vw;
+    object-fit: contain;
+    object-position: center;
+    height: 100%;
+  }
 }
 
 @media screen and (max-width: 600px) {
   .content {
     padding-top: 40px;
+    gap: 0.5rem;
   }
 
   .imageBorder {
@@ -249,23 +278,18 @@
     height: auto;
   }
 
+  .image {
+    width: 130%;
+    padding: 0;
+    margin-top: -10px;
+    margin-left: -25px;
+  }
+
+  .stats {
+    margin-top: 2rem;
+  }
+
   .galaxyContainer {
-    position: relative;
-    width: 100%;
-    border-top: none;
-    border-left: none;
-    overflow: unset;
-  }
-
-  .galaxyContainer figcaption {
-    border-top: 4px solid var(--stroke);
-    width: 100%;
-  }
-
-  .galaxyContainer video {
-    width: 100%;
-    object-fit: contain;
-    object-position: center;
-    height: unset;
+    clip-path: none;
   }
 }
